Change Web Crawling

--- a/Web_Crawling.ipynb
+++ b/Web_Crawling.ipynb
@@ -781,7 +781,70 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "r",
+      "source": "rt2_english = re.compile(\"[A-Za-z].+[A-Za-z][\\.\\?]\")",
+      "execution_count": 86,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "rt2_english.findall(txt)",
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 87,
+          "data": {
+            "text/plain": "['Dost thou love life? Then do not squander time, for that is the stuff life is made of.',\n 'Life is like riding a bicycle. To keep your balance you must keep moving.',\n 'Life is a tragedy when seen in close-up, but a comedy in long-shot.',\n \"Dream as if you'll live forever. Live as if you'll die today.\",\n 'Life is an endless series of trainwrecks with only brief commercial like breaks of happiness.']"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "",
       "execution_count": null,
       "outputs": []
     },
