learn DataFrame save csv file

--- a/Web_Crawling.ipynb
+++ b/Web_Crawling.ipynb
@@ -808,6 +808,97 @@
         "trusted": true
       },
       "cell_type": "code",
+      "source": "type(rt2_english)",
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 88,
+          "data": {
+            "text/plain": "_sre.SRE_Pattern"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "rt2_korea = re.compile(\"[가-힣].+[가-힣][\\.\\?]\")",
+      "execution_count": 89,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "rt2_korea.findall(txt)",
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 90,
+          "data": {
+            "text/plain": "['그대는 인생을 사랑하는가? 그렇다면 시간을 낭비하지 말라, 시간이야말로 인생을 형성하는 재료이기 때문이다.',\n '인생은 자전거를 타는 것과 같다. 균형을 잡으려면 움직여야 한다.',\n '영원히 살 것처럼 꿈꾸고 오늘 죽을 것처럼 살아라.',\n '인생이란 괴로움의 연속이고, 행복은 광고처럼 짧다.']"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "markdown",
+      "source": "# Selenium"
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "!pip3 install selenium",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": "Collecting selenium\n\u001b[?25l  Downloading https://files.pythonhosted.org/packages/80/d6/4294f0b4bce4de0abf13e17190289f9d0613b0a44e5dd6a7f5ca98459853/selenium-3.141.0-py2.py3-none-any.whl (904kB)\n\u001b[K     |████████████████████████████████| 911kB 978kB/s eta 0:00:01\n\u001b[?25hRequirement already satisfied: urllib3 in /home/nbuser/anaconda3_501/lib/python3.6/site-packages (from selenium) (1.23)\nInstalling collected packages: selenium\nSuccessfully installed selenium-3.141.0\n",
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "!sudo apt-get install phantomjs ",
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": "[sudo] password for nbuser: ",
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
       "source": "",
       "execution_count": null,
       "outputs": []
